--- a/my_serials/templates/serial/details.html
+++ b/my_serials/templates/serial/details.html
@@ -16,13 +16,61 @@
                     </div>
                     {% if serial_id %}
                         <div class="text-center mb-3 mr-3">
-                            <a href="{% url 'my_serials:delete' %}{{ serial_id }}" class="btn btn-danger" role="button">Remove Serial</a>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#ModalCenter{{ serial_id }}">Remove Serial</button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="ModalCenter{{ serial_id }}" tabindex="-1" role="dialog" aria-labelledby="ModalCenter{{ serial_id }}Title" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                    <div class="modal-content">
+                                        <!-- Modal header -->
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="ModalCenter{{ serial_id }}Title">{{ info.name }} ({{ year }})</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <!-- Modal body -->
+                                        <div class="modal-body">
+                                            Are you sure you want to remove this serial from your list?
+                                        </div>
+                                        <!-- Modal footer -->
+                                        <div class="modal-footer">
+                                            <a href="{% url 'my_serials:delete' %}{{ serial_id }}" class="btn btn-danger" role="button">Remove</a>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     {% else %}
-                        <form action="add/" method = "POST">
+                        <form action="{% url 'my_serials:add_serial' %}" method = "POST">
                             {% csrf_token %}
                             <div class="text-center mb-3 mr-3">
-                                <button type="submit" name="serial_id" value="{{ info.id }}" class="btn btn-success" onclick="return confirm('Add Serial to your List?')">Add to my List</button>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalCenter{{ info.id }}">Add to my List</button>
+                                <!-- Modal -->
+                                <div class="modal fade" id="ModalCenter{{ info.id }}" tabindex="-1" role="dialog" aria-labelledby="ModalCenter{{ info.id }}Title" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-content">
+                                            <!-- Modal header -->
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="ModalCenter{{ info.id }}Title">{{ info.name }} ({{ year }})</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <!-- Modal body -->
+                                            <div class="modal-body">
+                                                Add this serial to your list?
+                                            </div>
+                                            <!-- Modal footer -->
+                                            <div class="modal-footer">
+                                                <button type="submit" name="serial_id" value="{{ info.id }}" class="btn btn-success">Add</button>
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </form>
                     {% endif %}
@@ -31,8 +79,6 @@
                         {{ info.status }}
                     </div>
                 {% endif %}
-                <p>Rating: {{ info.vote_average }}</p>
-
             </p>
         </div>
         <div class="media-body">
@@ -47,6 +93,7 @@
             <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="nav-overview" role="tabpanel" aria-labelledby="nav-overview-tab">
                     <br>
+                    <p>Rating: {{ info.vote_average }}</p>
                     <p>{{ info.overview }}</p>
                 </div>
                 <div class="tab-pane fade" id="nav-cast" role="tabpanel" aria-labelledby="nav-cast-tab">
@@ -90,9 +137,9 @@
             </div>
         </div>
     </div>
-<hr class="mt-2 mb-4">
+<hr class="mt-2 mb-2">
 
-<div class="mt-3 mb-3">
+<div class="mt-2 mb-3">
     <h2>Seasons</h2>
 </div>
 
@@ -134,13 +181,15 @@
                         {% else %}
                             <p><img class="align-self-start mr-3" src="{% static 'resources/no_image.jpg' %}"></p>
                         {% endif %}
+                        <div class="text-center mr-3">
+                            <p>Episode number: {{ episode.episode_number }}</p>
+                            <p>Rating: {{ episode.vote_average }}</p>
+                        </div>
                     </div>
                     <div class="media-body">
                         <h3 class="mt-0" align="center">{{ episode.name }}</h3>
-                        <p>{{ episode.air_date }}</p>
-                        <p>{{ episode.episode_number }}</p>
+                        <p>Air date: {{ episode.air_date }}</p>
                         <p>{{ episode.overview }}</p>
-                        <p>{{ episode.vote_average }}</p>
                         <div class="text-right">
                             <button class="btn btn-outline-secondary btn-sm" type="button" data-toggle="collapse" data-target="#collapse{{ season.season_number }}" aria-expanded="false" aria-controls="collapse{{ season.season_number }}">close</button>
                         </div>
@@ -157,5 +206,9 @@
 <hr class="mt-2 mb-4">
 
 {% endfor %}
-
+<div class="float-right align-bottom" style="position:sticky;bottom:50px;right:50px;margin-right:10px;padding:5px 3px;">
+    <div class="shadow bg-white rounded">
+        <a href="{% url "my_serials:search" %}" class="btn btn-success" role="button">Search Serial</a>
+    </div>
+</div>
 {% endblock %}
