--- a/my_serials/templates/serial/list.html
+++ b/my_serials/templates/serial/list.html
@@ -12,7 +12,6 @@
             <div class="text-center mr-3">
                 <div class="btn-group btn-group-justified" role="group">
                     <a href="{% url 'my_serials:details' %}{{ serial.serial_id }}" class="btn btn-info" role="button">Details</a>
-<!--                    <a href="delete/{{ serial.id }}" class="btn btn-danger" role="button" onclick="return confirm('Are you sure you want to remove?')">Remove Serial</a>-->
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#ModalCenter{{ serial.id }}">Remove Serial</button>
                 </div>
@@ -33,7 +32,7 @@
                                 </div>
                                 <!-- Modal footer -->
                                 <div class="modal-footer">
-                                    <a href="{% url 'my_serials:delete' %}{{ serial.id }}" class="btn btn-danger" role="button">Remove Serial</a>
+                                    <a href="{% url 'my_serials:delete' %}{{ serial.id }}" class="btn btn-danger" role="button">Remove</a>
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                 </div>
                             </div>
@@ -48,16 +47,22 @@
                     <p>Next Episode: {{ serial.next_to_air.next_date }} {{ serial.next_to_air.next_name }}</p>
                     <p>{{ serial.next_to_air.overview }}</p>
                 {% else %}
-                    <p>To be updated</p>
+                    <div class="alert alert-info text-center" role="alert">
+                        To be updated.
+                    </div>
                 {% endif %}
         </div>
     </div>
     <hr class="mt-2 mb-4">
+{% empty %}
+    <div class="alert alert-info text-center" role="alert">
+        Currently you don't have any serial in your list. You can add serial by pressing this button.
+    </div>
 {% endfor %}
 
 <div class="float-right align-bottom" style="position:sticky;bottom:50px;right:50px;margin-right:10px;padding:5px 3px;">
     <div class="shadow bg-white rounded">
-        <a href="{% url "my_serials:search" %}" class="btn btn-success" role="button">Add Serial</a>
+        <a href="{% url "my_serials:search" %}" class="btn btn-success" role="button">Search Serial</a>
     </div>
 </div>
 {% endblock %}
