--- a/my_serials/static/style.css
+++ b/my_serials/static/style.css
@@ -1,14 +1,21 @@
-/* .navbar {
-    min-height: 60px;
-    max-height: 60px;
-} */
+html {
+    /*position: relative;*/
+    /*min-height: 100%;*/
+}
 
 body {
     overflow-x: hidden;
     margin-right: calc(-1 * (100vw - 100%));
+    /*min-height: 100vh;
+    height: 100vh;*/
 }
 
-
-/*p {
-    text-indent: 20px;
-}*/
+.my-footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-left: 15px;
+    margin-right: 15px;
+    justify-content: center;
+}
