--- a/my_serials/templates/base.html
+++ b/my_serials/templates/base.html
@@ -7,42 +7,41 @@
 <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
 <!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <!--Fonts-->
 <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 
     <!--Styles-->
     <link href="{% static "style.css" %}" rel="stylesheet">
-    <link href="{% static "sticky-footer-navbar.css" %}" rel="stylesheet">
+<!--    <link href="{% static "sticky-footer.css" %}" rel="stylesheet">-->
     <link href="{% static "dark-mode.css" %}" rel="stylesheet">
 
 </head>
 <body>
     <div class="container ml-10 mr-10">
         <div class="row justify-content-center">
-            <div class="col-11">
+            <div class="col-11 min-vh-100">
                 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-                    <span class="navbar-brand mb-0 h1">
+                    <a class="navbar-brand" href="{% url "my_serials:all_serials" %}">
                         <img src="{% static 'resources/movie-icon-13.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
                         <b>My Serials</b>
-                    </span>
-<!--                <a class="navbar-brand" href="#">My Serials</a>-->
+                    </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url "my_serials:all_serials" %}">Serials list</a>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url "my_serials:search" %}">Add serial</a>
-                            </li>
+<!--                            <li class="nav-item active">-->
+<!--                                <a class="nav-link" href="{% url "my_serials:all_serials" %}">Serials list</a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item active">-->
+<!--                                <a class="nav-link" href="{% url "my_serials:search" %}">Add serial</a>-->
+<!--                            </li>-->
                         </ul>
 
                         <div class="form-inline my-2 my-lg-0">
@@ -59,7 +58,7 @@
                                     <a class="nav-link" href="{% url "my_serials:logout" %}">Logout</a>
                                 </span>
                             {% else %}
-                                Welcome!
+                                Welcome to MySerials!
                                 <span class="navbar-text">
                                     <a class="nav-link" href="{% url "my_serials:login" %}">Login</a>
                                 </span>
@@ -83,14 +82,12 @@
                     </div>
                 </div>
 
-            </div>
-        </div>
-    </div>
+                <div class="container">
+                    <nav class="navbar navbar-light bg-light my-footer">
+                        <span class="text-muted">Eldar Dniaprouski &copy 2020</span>
+                    </nav>
+                </div>
 
-    <div class="container ml-10 mr-10">
-        <div class="row justify-content-center">
-            <div class="col-11 footer">
-                <span class="text-muted">Place sticky footer content here.</span>
             </div>
         </div>
     </div>
