--- a/my_serials/templates/registration/logged_out.html
+++ b/my_serials/templates/registration/logged_out.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {% block title%} Logout {% endblock%}
 {% block content%}
-<div class="alert alert-success" role="alert">
-  Logged out
+<div class="mt-3 mb-3">
+    <h2>Logout</h2>
+</div>
+<div class="alert alert-success text-center" role="alert">
+    You successfully logged out. Hope to see you again!
 </div>
 {% endblock %}
