--- a/my_serials/static/style.css
+++ b/my_serials/static/style.css
@@ -1,9 +1,16 @@
+/*@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap');*/
+/*@import url('https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap&subset=latin-ext');*/
+@import url('https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i&display=swap');
+
+
 html {
     /*position: relative;*/
     /*min-height: 100%;*/
 }
 
 body {
+    font-family: 'Arvo', serif;
+    /*font-family: 'Bitter', sans-serif !important;*/
     overflow-x: hidden;
     margin-right: calc(-1 * (100vw - 100%));
     /*min-height: 100vh;
@@ -18,4 +25,12 @@ body {
     margin-left: 15px;
     margin-right: 15px;
     justify-content: center;
+}
+
+.float-button {
+    position: sticky;
+    bottom: 50px;
+    right: 90px;
+    margin-right: 90px;
+    padding: 5px 3px;
 }
