--- a/my_serials/templates/serial/search.html
+++ b/my_serials/templates/serial/search.html
@@ -21,9 +21,9 @@
                         <form action="{% url 'my_serials:add_serial' %}" method = "POST">
                             {% csrf_token %}
                             <div class="text-center mr-3">
-                                <div class="btn-group btn-group-justified" role="group">
+                                <div class="btn-group btn-group-justified btn-block" role="group">
                                     <!-- Button trigger modal -->
-                                    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalCenter{{ serial.id }}">Add to my List</button>
+                                    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalCenter{{ serial.id }}">Add</button>
                                     <!-- Modal -->
                                     <div class="modal fade" id="ModalCenter{{ serial.id }}" tabindex="-1" role="dialog" aria-labelledby="ModalCenter{{ serial.id }}Title" aria-hidden="true">
                                         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -55,16 +55,16 @@
                         </form>
                     {% else %}
                         <div class="text-center mr-3">
-                            <div class="btn-group btn-group-justified" role="group">
-                                <button type="submit" class="btn btn-outline-success" disabled>Add to my List</button>
+                            <div class="btn-group btn-group-justified btn-block" role="group">
+                                <button type="submit" class="btn btn-outline-success" disabled>Add</button>
                                 <a href="{% url 'my_serials:details' %}{{ serial.id }}" class="btn btn-info" role="button">Details</a>
                             </div>
                         </div>
                     {% endif %}
                 {% else %}
                     <div class="text-center mr-3">
-                        <div class="btn-group btn-group-justified" role="group">
-                            <button type="submit" class="btn btn-outline-success" disabled>Add to my List</button>
+                        <div class="btn-group btn-group-justified btn-block" role="group">
+                            <button type="submit" class="btn btn-outline-success" disabled>Add</button>
                             <a href="{% url 'my_serials:details' %}{{ serial.id }}" class="btn btn-info" role="button">Details</a>
                         </div>
                     </div>
