--- a/my_serials/templates/base.html
+++ b/my_serials/templates/base.html
@@ -1,91 +1,90 @@
 {% load static %}
+<!--Comments Done-->
+{% load bootstrap4 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+{% bootstrap_messages %}
+
 <!DOCTYPE html>
 <html lang="en">
-    <title>{% block title %}My Serials{% endblock %}</title>
+<title>{% block title %}My Serials{% endblock %}</title>
 <head>
-    <!--Bootstrap-->
-<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
-<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
+  <!--Bootstrap-->
+  <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
+  <!--    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
+  <!--    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>-->
+  <!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>-->
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <!--Fonts-->
+  <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 
-    <!--Fonts-->
-<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
-
-    <!--Styles-->
-    <link href="{% static "style.css" %}" rel="stylesheet">
+  <!--Styles-->
+  <link href="{% static "style.css" %}" rel="stylesheet">
+  <link href="{% static "dark-mode.css" %}" rel="stylesheet">
 <!--    <link href="{% static "sticky-footer.css" %}" rel="stylesheet">-->
-    <link href="{% static "dark-mode.css" %}" rel="stylesheet">
-
 </head>
 <body>
-    <div class="container ml-10 mr-10">
-        <div class="row justify-content-center">
-            <div class="col-11 min-vh-100">
-                <!--Navbar-->
-                <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="{% url "my_serials:all_serials" %}">
-                        <img src="{% static 'resources/movie-icon-13.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-                        <b>My Serials</b>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url "my_serials:search" %}">Search</a>
-                            </li>
-                        </ul>
-
-                        <div class="custom-control custom-switch mr-3">
-                            <input type="checkbox" class="custom-control-input" id="darkSwitch">
-                            <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
-                            <script src="{% static "dark-mode-switch.min.js" %}"></script>
-                        </div>
-
-
-                        {% if request.user.is_authenticated %}
-                            Welcome, {{ request.user.first_name }}!
-                            <span class="navbar-text">
-                                <a class="nav-link" href="{% url "my_serials:logout" %}">Logout</a>
-                            </span>
-                        {% else %}
-                            Welcome to MySerials!
-                            <span class="navbar-text">
-                                <a class="nav-link" href="{% url "my_serials:login" %}">Login</a>
-                            </span>
-                        {% endif %}
-                        <img src="{% static 'resources/tmdb_green.svg' %}" alt="" height="30em">
-
-                    </div>
-                </nav>
-                <!--Content-->
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-11">
-                            {% block content %}
-                            {% endblock %}
-                        </div>
-                    </div>
-                </div>
-                <!--Button-->
-                {% block button %}
-                {% endblock %}
-                <!--Footer-->
-                <div class="container">
-                    <nav class="navbar navbar-light bg-light my-footer">
-                        <span class="text-muted">Eldar Dniaprouski &copy 2020 Powered by Bootstrap</span>
-                    </nav>
-                </div>
-
+  <div class="container ml-10 mr-10">
+    <div class="row justify-content-center">
+      <div class="col-11 min-vh-100">
+        <!--Navbar-->
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+          <!--Navbar Logo-->
+          <a class="navbar-brand" href="{% url "my_serials:all_serials" %}">
+          <img src="{% static 'resources/movie-icon-13.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+          <b>My Serials</b>
+          </a>
+          <!--Navbar Collapse Button-->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!--Navbar Search Link-->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="{% url "my_serials:search" %}">Search</a>
+              </li>
+            </ul>
+            <!--Navbar Dark Mode Switch-->
+            <div class="custom-control custom-switch mr-3">
+              <input type="checkbox" class="custom-control-input" id="darkSwitch">
+              <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+              <script src="{% static "dark-mode-switch.min.js" %}"></script>
             </div>
+            <!--Navbar Welcome Message Login/Logout-->
+            {% if request.user.is_authenticated %}
+              Welcome, {{ request.user.first_name }}!
+              <span class="navbar-text">
+                <a class="nav-link" href="{% url "my_serials:logout" %}">Logout</a>
+              </span>
+            {% else %}
+              Welcome to MySerials!
+              <span class="navbar-text">
+                <a class="nav-link" href="{% url "my_serials:login" %}">Login</a>
+              </span>
+            {% endif %}
+            <!--Navbar TMDB Logo-->
+            <img src="{% static 'resources/tmdb_green.svg' %}" alt="" height="30em">
+          </div>
+        </nav>
+        <!--Content-->
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-11">
+              {% block content %}{% endblock %}
+            </div>
+          </div>
         </div>
+        <!--Button-->
+        {% block button %}{% endblock %}
+        <!--Footer-->
+        <div class="container">
+          <nav class="navbar navbar-light bg-light my-footer">
+            <span class="text-muted">Eldar Dniaprouski &copy 2020 Powered by Bootstrap</span>
+          </nav>
+        </div>
+      </div>
     </div>
-
+  </div>
 </body>
 </html>
