Registration and reset templates

--- a/my_serials/templates/registration/logged_out.html
+++ b/my_serials/templates/registration/logged_out.html
@@ -1,10 +1,16 @@
 {% extends "base.html" %}
+
 {% block title%} Logout {% endblock%}
+
 {% block content%}
-<div class="mt-3 mb-3">
+  <div class="mt-3 mb-3">
     <h2>Logout</h2>
-</div>
-<div class="alert alert-success text-center" role="alert">
-    You successfully logged out. Hope to see you again!
-</div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <div class="alert alert-success text-center" role="alert">
+        You successfully logged out. Hope to see you again!
+      </div>
+    </div>
+  </div>
 {% endblock %}
