--- a/my_serials/templates/serial/list.html
+++ b/my_serials/templates/serial/list.html
@@ -77,7 +77,7 @@
 {% block button %}
   <div class="float-right align-bottom float-button">
     <div class="shadow bg-white rounded">
-      <a href="{% url "my_serials:search" %}" class="btn btn-success" role="button">Search Serial</a>
+      <a href="{% url "my_serials:search" %}" class="btn btn-success" role="button">Find Serial</a>
     </div>
   </div>
 {% endblock %}
