--- a/my_serials/templates/registration/password_reset_complete.html
+++ b/my_serials/templates/registration/password_reset_complete.html
@@ -1,6 +1,16 @@
-{% block title %}Password reset{% endblock %}
+{% extends "base.html" %}
+
+{% block title %}Reset Password{% endblock %}
 
 {% block content %}
-  <h1>Password set</h1>
-  <p>Your password has been set. You can <a href="{% url "my_serials:login" %}">log in now</a></p>
+  <div class="mt-3 mb-3">
+    <h2>Reset Password</h2>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <div class="alert alert-success text-center" role="alert">
+        Password change successful. You can <a href="{% url "my_serials:login" %}">Login</a> now
+      </div>
+    </div>
+  </div>
 {% endblock %}
