--- a/my_serials/templates/registration/password_reset_confirm.html
+++ b/my_serials/templates/registration/password_reset_confirm.html
@@ -1,17 +1,31 @@
 {% extends "base.html" %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Reset Password{% endblock %}
+
+{% load crispy_forms_tags %}
 
 {% block content %}
-  <h1>Reset your password</h1>
-  {% if validlink %}
-    <p>Please enter your new password twice:</p>
-    <form action="." method="post">
-      {{ form.as_p }}
-      {% csrf_token %}
-      <p><input type="submit" value="Change my password" /></p>
-    </form>
-  {% else %}
-    <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
-  {% endif %}
+  <div class="mt-3 mb-3">
+    <h2>Reset Password</h2>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-8">
+      {% if validlink %}
+        <div class="alert alert-warning text-center" role="alert">
+          Please enter new password twice:
+        </div>
+        <form action="." method="post">
+          {{ form|crispy }}
+          {% csrf_token %}
+          <div class="row justify-content-center">
+            <button type="submit" class="btn btn-success" value="Change Password">Change Password</button>
+          </div>
+        </form>
+      {% else %}
+        <div class="alert alert-danger text-center" role="alert">
+          The password reset link was invalid, possibly because it has already been used. Please request a new password reset.
+        </div>
+      {% endif %}
+    </div>
+  </div>
 {% endblock %}
