--- a/my_serials/templates/registration/password_reset_done.html
+++ b/my_serials/templates/registration/password_reset_done.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Reset Password{% endblock %}
 
 {% block content %}
-  <h1>Reset your password</h1>
-  <p>We've emailed you instructions for setting your password.</p>
-  <p>If you don't receive an email, please make sure you've entered the address you registered with.</p>
+  <div class="mt-3 mb-3">
+    <h2>Reset Password</h2>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <div class="alert alert-info text-center" role="alert">
+        We've sent e-mail with instructions to your mailbox.
+        <br><br>
+        If you didn't receive an e-mail, please make sure you've entered the right address.
+      </div>
+    </div>
+  </div>
 {% endblock %}
