--- a/my_serials/templates/registration/password_reset_form.html
+++ b/my_serials/templates/registration/password_reset_form.html
@@ -1,13 +1,25 @@
 {% extends "base.html" %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Reset Password{% endblock %}
+
+{% load crispy_forms_tags %}
 
 {% block content %}
-  <h1>Forgotten your password?</h1>
-  <p>Enter your e-mail address to obtain a new password.</p>
-  <form action="." method="post">
-    {{ form.as_p }}
-    <p><input type="submit" value="Send e-mail"></p>
-    {% csrf_token %}
-  </form>
+  <div class="mt-3 mb-3">
+    <h2>Reset Password</h2>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <div class="alert alert-warning text-center" role="alert">
+        Enter your e-mail address to obtain a new password.
+      </div>
+      <form action="." method="post">
+        {{ form|crispy }}
+        <div class="row justify-content-center">
+          <button type="submit" class="btn btn-success" value="Send e-mail">Send e-mail</button>
+        </div>
+        {% csrf_token %}
+      </form>
+    </div>
+  </div>
 {% endblock %}
