--- a/my_serials/templates/registration/register.html
+++ b/my_serials/templates/registration/register.html
@@ -1,19 +1,22 @@
 {% extends "base.html" %}
-{% block title %}create {% endblock %}
-{% block content %}
+
+{% block title %}Create Account{% endblock %}
+
 {% load crispy_forms_tags %}
-<div class="mt-3 mb-3">
-    <h2>Create account</h2>
-</div>
-<div class="row justify-content-center">
-    <div class="col-6">
-        <form action="." method="post">
-            {{ form|crispy }}
-            {% csrf_token %}
-            <div class="row justify-content-center">
-                <button type="submit" class="btn btn-success" value="create">Create</button>
-            </div>
-        </form>
+
+{% block content %}
+  <div class="mt-3 mb-3">
+    <h2>Create Account</h2>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <form action="." method="post">
+        {{ form|crispy }}
+        {% csrf_token %}
+        <div class="row justify-content-center">
+          <button type="submit" class="btn btn-success" value="create">Create</button>
+        </div>
+      </form>
     </div>
-</div>
+  </div>
 {% endblock %}
