--- a/my_serials/templates/serial/search.html
+++ b/my_serials/templates/serial/search.html
@@ -76,12 +76,12 @@
       {% if serial.in_production %}
       {% if not serial.in_list %}
       {% else %}
-      <div class="alert alert-warning" role="alert">
+      <div class="alert alert-warning text-center" role="alert">
         Already in your list
       </div>
       {% endif %}
       {% else %}
-      <div class="alert alert-warning" role="alert">
+      <div class="alert alert-warning text-center" role="alert">
         Show is canceled
       </div>
       {% endif %}
