Add Popular and On Air Today

--- a/my_serials/templates/base.html
+++ b/my_serials/templates/base.html
@@ -44,6 +44,12 @@
               <li class="nav-item active">
                 <a class="nav-link" href="{% url "my_serials:search" %}">Search</a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="{% url "my_serials:popular" %}">Popular</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="{% url "my_serials:on_air_today" %}">On Air Today</a>
+              </li>
             </ul>
             <!--Navbar Dark Mode Switch-->
             <div class="custom-control custom-switch mr-3">
