--- a/my_serials/templates/serial/popular.html
+++ b/my_serials/templates/serial/popular.html
@@ -1,19 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}Search{% endblock %}
+{% block title %}Popular{% endblock %}
 
 {% block content %}
   <div class="mt-3 mb-3">
-    <h2>Search Serial</h2>
+    <h2>Popular Serials</h2>
   </div>
-  <div class="row justify-content-center mt-3 mb-3">
-    <form class="form-inline justify-content-center" method="GET" action="." style="width: 100%">
-      {% csrf_token %}
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" name="query" aria-label="Search" style="width: 60%">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-  {% for serial in search_result %}
+  {% for serial in popular_list %}
   <div class="media">
     <div>
       <img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ serial.poster_path }}" alt="Generic placeholder image">
@@ -89,9 +82,13 @@
     </div>
   </div>
   <hr class="mt-2 mb-4">
-  {% empty %}
-    <div class="row justify-content-center">
-      <p>No results found</p>
-    </div>
   {% endfor %}
+{% endblock %}
+
+{% block button %}
+  <div class="float-right align-bottom float-button">
+    <div class="shadow bg-white rounded">
+      <a href="{% url "my_serials:search" %}" class="btn btn-success" role="button">Find Serial</a>
+    </div>
+  </div>
 {% endblock %}
