--- a/my_serials/templates/serial/list.html
+++ b/my_serials/templates/serial/list.html
@@ -11,7 +11,7 @@
       <div>
         <!--Poster-->
         <div class="text-center">
-          <img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ serial.serial_info.poster_path }}" alt="Generic placeholder image">
+          <a data-fancybox="gallery{{ serial.id }}" href="https://image.tmdb.org/t/p/original{{ serial.serial_info.poster_path }}"><img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ serial.serial_info.poster_path }}" alt="Generic placeholder image"></a>
         </div>
         <p>
           <!--Button Group-->
