--- a/my_serials/templates/base.html
+++ b/my_serials/templates/base.html
@@ -7,8 +7,9 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<title>{% block title %}My Serials{% endblock %}</title>
 <head>
+  <title>{% block title %}My Serials{% endblock %}</title>
+  <link rel="icon" type="image/png" href="{% static 'resources/movie-icon-13.png' %}">
   <!--Bootstrap-->
   <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
   <!--    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
@@ -18,10 +19,13 @@
   <!--Fonts-->
   <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 
+  <!--Fancybox CSS-->
+<!--  <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+
   <!--Styles-->
   <link href="{% static "style.css" %}" rel="stylesheet">
   <link href="{% static "dark-mode.css" %}" rel="stylesheet">
-<!--    <link href="{% static "sticky-footer.css" %}" rel="stylesheet">-->
 </head>
 <body>
   <div class="container ml-10 mr-10">
@@ -92,5 +96,7 @@
       </div>
     </div>
   </div>
+  <!--Fancybox JS-->
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 </body>
 </html>
