--- a/my_serials/templates/serial/on_air_today.html
+++ b/my_serials/templates/serial/on_air_today.html
@@ -9,7 +9,9 @@
   {% for serial in air_today_list %}
   <div class="media">
     <div>
-      <img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ serial.poster_path }}" alt="Generic placeholder image">
+      <div class="text-center">
+        <a data-fancybox="gallery{{ serial.id }}" href="https://image.tmdb.org/t/p/original{{ serial.poster_path }}"><img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ serial.poster_path }}" alt="Generic placeholder image"></a>
+      </div>
       <p>
       {% if not serial.in_list %}
         <form action="{% url 'my_serials:add_serial' %}" method = "POST">
