--- a/my_serials/templates/base.html
+++ b/my_serials/templates/base.html
@@ -9,7 +9,7 @@
 <html lang="en">
 <head>
   <title>{% block title %}My Serials{% endblock %}</title>
-  <link rel="icon" type="image/png" href="{% static 'resources/movie-icon-13.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'resources/movie-icon.png' %}">
   <!--Bootstrap-->
   <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
   <!--    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
@@ -35,7 +35,7 @@
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
           <!--Navbar Logo-->
           <a class="navbar-brand" href="{% url "my_serials:all_serials" %}">
-          <img src="{% static 'resources/movie-icon-13.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+          <img src="{% static 'resources/movie-icon.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
           <b>MySerials</b>
           </a>
           <!--Navbar Collapse Button-->
