--- a/my_serials/static/style.css
+++ b/my_serials/static/style.css
@@ -1,7 +1,8 @@
-/*@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap');*/
-/*@import url('https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap&subset=latin-ext');*/
+@import url('https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap&subset=latin-ext');
 @import url('https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,400;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap');
 
 html {
     /*position: relative;*/
@@ -10,19 +11,17 @@ html {
 }
 
 body {
-    /*font-family: 'Arvo', serif;*/
     /*font-family: 'Bitter', sans-serif !important;*/
+    /*font-family: 'Arvo', serif;*/
+    /*font-family: 'Titillium Web', sans-serif;*/
+    /*font-family: 'Oxanium', cursive;*/
+    font-family: 'Saira', sans-serif;
     overflow-x: hidden !important;
     margin-right: calc(-1 * (100vw - 100%)) !important;
     /*overflow: auto !important;*/
     /*min-height: 100vh;
     height: 100vh;*/
 }
-
-/*.fancybox-container {
-    overflow-x: hidden;
-    margin-right: calc(-1 * (100vw - 100%));
-}*/
 
 .my-footer {
     position: absolute;
